force-app/main/default/objects/Homework__c/Homework__c.object-meta.xml
<CustomObject>
    <label>Homework</label>
    <nameField>
        <label>Homework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homeworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>