force-app/main/default/objects/Homework__c/fields/IsControlWork__c.field-meta.xml
<CustomField>
    <fullName>IsControlWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Control Work</label>
    <type>Checkbox</type>
</CustomField>