force-app/main/default/objects/Homework__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Homeworks</relationshipLabel>
    <relationshipName>Homeworks</relationshipName>
    <type>Lookup</type>
</CustomField>